// Original file: src/grpc/common.proto

import type { StatefulObjectBaseInformation as _miso_common_StatefulObjectBaseInformation, StatefulObjectBaseInformation__Output as _miso_common_StatefulObjectBaseInformation__Output } from '../../miso/common/StatefulObjectBaseInformation';

export interface FlagSetValueReponse {
  'statefulObjectBase'?: (_miso_common_StatefulObjectBaseInformation | null);
  'value'?: (boolean);
}

export interface FlagSetValueReponse__Output {
  'statefulObjectBase': (_miso_common_StatefulObjectBaseInformation__Output | null);
  'value': (boolean);
}
